[flex-festival] : aligning still in progress

--- a/projects/flex/Festival Site Design/index.html
+++ b/projects/flex/Festival Site Design/index.html
@@ -56,64 +56,119 @@
       </p>
     </div>
     <section class="artists">
-      <h2>ARTISTS</h2>
-      <div class="line"></div>
-      <p class="p-under">
-        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
-        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
-        cursus auctor.
-      </p>
-      <div class="artist">
-        <img src="./assets/pics/tomke.jpeg" alt="" />
-        <h3>TOMKE</h3>
-        <p>Elementum hendrerit lectus laoreet gravida</p>
+      <div class="section-intro">
+        <h2>ARTISTS</h2>
+        <div class="line"></div>
+        <p class="p-under">
+          In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+          gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+          cursus auctor.
+        </p>
       </div>
-      <div class="artist">
-        <img src="./assets/pics/upce.jpeg" alt="" />
-        <h3>UPCE</h3>
-        <p>Elementum hendrerit lectus laoreet gravida</p>
-      </div>
-      <div class="artist">
-        <img src="./assets/pics/hendrei.jpeg" alt="" />
-        <h3>HENDREI</h3>
-        <p>Hendrerit lectus laoreet gravida</p>
-      </div>
-      <div class="artist">
-        <img src="./assets/pics/pugr.jpeg" alt="" />
-        <h3>PUGR</h3>
-        <p>Elementum hendrerit lectus laoreet gravida</p>
+      <div class="section-main-part">
+        <div class="artist">
+          <img src="./assets/pics/tomke.jpeg" alt="" />
+          <h3>TOMKE</h3>
+          <p>Elementum hendrerit lectus laoreet gravida</p>
+        </div>
+        <div class="artist">
+          <img src="./assets/pics/upce.jpeg" alt="" />
+          <h3>UPCE</h3>
+          <p>Elementum hendrerit lectus laoreet gravida</p>
+        </div>
+        <div class="artist">
+          <img src="./assets/pics/hendrei.jpeg" alt="" />
+          <h3>HENDREI</h3>
+          <p>Hendrerit lectus laoreet gravida</p>
+        </div>
+        <div class="artist">
+          <img src="./assets/pics/pugr.jpeg" alt="" />
+          <h3>PUGR</h3>
+          <p>Elementum hendrerit lectus laoreet gravida</p>
+        </div>
       </div>
     </section>
     <section class="galery">
-      <h2>Gallery</h2>
-      <div class="line"></div>
-      <p class="p-under">
-        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
-        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
-        cursus auctor.
-      </p>
-      <div class="imgs">
-        <img src="./assets/pics/gare.jpeg" alt="" /><img
-          src="./assets/pics/kitchen.jpeg"
-          alt=""
-        /><img src="./assets/pics/couple.jpeg" alt="" /><img
-          src="./assets/pics/house.jpeg"
-          alt=""
-        /><img src="./assets/pics/arch.jpeg" alt="" /><img
-          src="./assets/pics/tool.jpeg"
-          alt=""
-        />
+      <div class="section-intro">
+        <h2>Gallery</h2>
+        <div class="line"></div>
+        <p class="p-under">
+          In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+          gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+          cursus auctor.
+        </p>
+      </div>
+      <div class="section-main-part">
+        <div class="imgs">
+          <img src="./assets/pics/gare.jpeg" alt="" />
+          <img src="./assets/pics/kitchen.jpeg" alt="" />
+          <img src="./assets/pics/couple.jpeg" alt="" />
+          <img src="./assets/pics/house.jpeg" alt="" />
+          <img src="./assets/pics/arch.jpeg" alt="" />
+          <img src="./assets/pics/tool.jpeg" alt="" />
+        </div>
       </div>
     </section>
     <section>
-      <h2>TICKETS</h2>
-      <div class="line"></div>
-      <p class="p-under">
-        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
-        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
-        cursus auctor.
-      </p>
-      <h3>ONE DAY TICKET</h3>
+      <div class="section-intro">
+        <h2>TICKETS</h2>
+        <div class="line"></div>
+        <p class="p-under">
+          In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+          gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+          cursus auctor.
+        </p>
+      </div>
+      <div class="section-main-part">
+        <div class="a-ticket-box">
+          <h3>ONE DAY TICKET</h3>
+          <div class="wide-line"></div>
+          <div class="price-box">
+            <p>
+              Neque cursus metus volutpat nulla euismod eu, phasellus nisl
+              ultricies nibh at odio lacus pulvinar fermentum, neque tincidunt
+              mattis magna
+            </p>
+            <div class="price">
+              <span>Price:</span>
+              <span class="eur">200 €</span>
+            </div>
+            <button class="btn">Buy Ticket</button>
+          </div>
+        </div>
+        <div class="a-ticket-box">
+          <h3>TWO DAYS TICKET</h3>
+          <div class="wide-line"></div>
+          <div class="price-box">
+            <p>
+              Neque cursus metus volutpat nulla euismod eu, phasellus nisl
+              ultricies nibh at odio lacus pulvinar fermentum, neque tincidunt
+              mattis magna
+            </p>
+            <div class="price">
+              <span>Price:</span>
+              <span class="eur">300 €</span>
+            </div>
+            <button class="btn">Buy Ticket</button>
+          </div>
+        </div>
+        <div class="a-ticket-box">
+          <h3>THREE DAYS TICKET</h3>
+          <div class="wide-line"></div>
+          <div class="price-box">
+            <p>
+              Neque cursus metus volutpat nulla euismod eu, phasellus nisl
+              ultricies nibh at odio lacus pulvinar fermentum, neque tincidunt
+              mattis magna
+            </p>
+            <div class="price">
+              <span>Price:</span>
+              <span class="eur">400 €</span>
+            </div>
+            <button class="btn">Buy Ticket</button>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
