[calendar]:wrk on resp [global]:+ links to assignments

--- a/index.html
+++ b/index.html
@@ -479,10 +479,29 @@
         /></a>
       </section>
       <section>
-        <h2 id="work-in-progress">Dabar daroma...</h2>
+        <h2>Naudojant Grid</h2>
+        <p>Smulkūs pratimai</p>
+        <a href="./projects/grid/abcd/index.html"
+          ><img class="screenshots" src="./images/grid/abcd.png" alt=""
+        /></a>
+        <a href="./projects/grid/dark-layout/index.html"
+          ><img class="screenshots" src="./images/grid/dark.png" alt=""
+        /></a>
+        <a href="./projects/grid/item-positions/index.html"
+          ><img class="screenshots" src="./images/grid/positions.png" alt=""
+        /></a>
+        <a href="./projects/grid/kalendorius/index.html"
+          ><img class="screenshots" src="./images/grid/gruodis.png" alt=""
+        /></a>
+      </section>
+      <section>
+        <h2 id="work-in-progress">Dabar daroma...("master" branch)</h2>
         <a href="./projects/flex/Festival Site Design/index.html"
-        ><img class="screenshots" src="./projects/flex/Festival Site Design/assets/pics/festival-header-pic.jpeg" alt=""
-      /></a>
+          ><img
+            class="screenshots"
+            src="./projects/flex/Festival Site Design/assets/pics/festival-header-pic.jpeg"
+            alt=""
+        /></a>
       </section>
 
       <!-- wrknow -->
@@ -494,10 +513,8 @@
       <a id="link-to-tasks" href="#figma-tasks"
         >linkas į padarytas užduotėles</a
       >
-      <br>
-      <a id="link-to-tasks" href="#work-in-progress"
-      >dabar daroma</a
-    >
+      <br />
+      <a id="link-to-tasks" href="#work-in-progress">dabar daroma</a>
       <ol id="toc">
         <!-- čia susigeneruos nuorodos į h2, 
           kuriems bus suteikti random id jeigu nėra id
