--- a/projects/grid/item-positions/index.html
+++ b/projects/grid/item-positions/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid excercises: grid-template-areas</title>
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
+    <link rel="stylesheet" href="../../../reset.css" />
+    <link rel="stylesheet" href="../../../base.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -38,10 +38,10 @@
         inventore sapiente?
       </div>
       <div class="itemC">
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
       </div>
       <div class="itemD">
         D
@@ -53,35 +53,34 @@
           inventore sed, in necessitatibus iure ipsum provident sit perspiciatis
           quibusdam minima neque dolore saepe consequuntur voluptates aut.
           Consectetur debitis mollitia corporis vitae nemo commodi excepturi
-          possimus <img src="../pics/js-pic.jpeg" alt="" />quisquam cum
-          similique quod ratione, consequatur esse est doloribus illum
-          laboriosam sint fuga temporibus tenetur inventore sunt voluptatibus.
-          Aspernatur repellendus consectetur, explicabo consequuntur autem culpa
-          provident et, cum, quas architecto neque blanditiis! Sunt in iste
-          quaerat distinctio animi voluptas. Ut, porro eaque inventore
-          doloremque odio harum dolor molestiae impedit quidem laudantium
-          ratione optio libero labore vel cum dolore nesciunt minus modi.
-          Veritatis consectetur ipsa enim aut perferendis eum minus eos quisquam
-          illum corrupti, et ipsam ratione tenetur voluptatum architecto
-          dignissimos odio quos fuga quasi! Provident porro repellendus odio ad
-          alias.
+          possimus <img src="./pics/js-pic.jpeg" alt="" />quisquam cum similique
+          quod ratione, consequatur esse est doloribus illum laboriosam sint
+          fuga temporibus tenetur inventore sunt voluptatibus. Aspernatur
+          repellendus consectetur, explicabo consequuntur autem culpa provident
+          et, cum, quas architecto neque blanditiis! Sunt in iste quaerat
+          distinctio animi voluptas. Ut, porro eaque inventore doloremque odio
+          harum dolor molestiae impedit quidem laudantium ratione optio libero
+          labore vel cum dolore nesciunt minus modi. Veritatis consectetur ipsa
+          enim aut perferendis eum minus eos quisquam illum corrupti, et ipsam
+          ratione tenetur voluptatum architecto dignissimos odio quos fuga
+          quasi! Provident porro repellendus odio ad alias.
         </p>
       </div>
       <div class="itemE">
         E
         <br />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
-        <img src="../pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
+        <img src="./pics/js-pic.jpeg" alt="" />
       </div>
       <div class="itemF">F</div>
     </div>
