--- a/projects/grid/abcd/index.html
+++ b/projects/grid/abcd/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid excercises: grid-template-areas</title>
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../../base.css" />
+    <link rel="stylesheet" href="../../../reset.css" />
+    <link rel="stylesheet" href="../../../base.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
