--- a/projects/grid/kalendorius/index.html
+++ b/projects/grid/kalendorius/index.html
@@ -73,6 +73,7 @@
         markToday();
 
         function addNote(id, text) {
+          console.log(id);
           //kreipsimes pagal parent id ir vaikui irasysime texta
           let cell = document.getElementById(id);
           cell.lastChild.textContent = text;
@@ -80,7 +81,7 @@
           let newSpan = document.createElement("span");
           cell.appendChild(newSpan);
         }
-
+        //REIK PAKEISTI I VIENA EVENT LISTENER ON ALL CALENDAR
         function drawDaysOfDecember23() {
           for (let i = 1; i < 32; i++) {
             let aDay = document.createElement("div");
@@ -89,11 +90,12 @@
             <span id="note-${i}"></span>`;
             if ((i - 3) % 7 == 0) aDay.classList.add("sunday");
             document.querySelectorAll(".calendar")[0].appendChild(aDay);
-            aDay.addEventListener("click", (e) => {
+            aDay.addEventListener("click", function handleDayClick(e) {
+              let calendar = document.querySelectorAll(".calendar")[0];
               // console.log(e.currentTarget.id); //pvz cell-5 ar cell-26
               // isimenam kur esam
               let currentId = e.currentTarget.id;
-
+              console.log(currentId);
               //reikia atidengti textarea, paimti teksta ir iskviesti addNote
 
               //atidengiam tekstarea
@@ -107,8 +109,9 @@
 
               // jei spaudzia cancel, uzdarom textarea
               cancelBtn.addEventListener("click", () => {
-                texstarea.value = "";
+                textarea.value = "";
                 noteBox.classList.add("hidden");
+                calendar.classList.remove("hidden");
               });
 
               // jei spaudzia save, tai issaugom note kalendoriuje ir localstorage
@@ -117,6 +120,7 @@
                 addNote(currentId, textarea.value);
                 textarea.value = "";
                 noteBox.classList.add("hidden");
+                calendar.classList.remove("hidden");
               });
             });
           }
