[global]:upd links

--- a/index.html
+++ b/index.html
@@ -477,6 +477,10 @@
         <a href="./projects/flex/foto-journey/index.html"
           ><img class="screenshots" src="./images/flex/foto-journey.png" alt=""
         /></a>
+
+        <a href="./projects/flex/Festival Site Design/index.html"
+          ><img class="screenshots" src="./images/flex/fest.png" alt="" />
+        </a>
       </section>
       <section>
         <h2>Naudojant Grid</h2>
@@ -495,13 +499,7 @@
         /></a>
       </section>
       <section>
-        <h2 id="work-in-progress">Dabar daroma...("master" branch)</h2>
-        <a href="./projects/flex/Festival Site Design/index.html"
-          ><img
-            class="screenshots"
-            src="./projects/flex/Festival Site Design/assets/pics/festival-header-pic.jpeg"
-            alt=""
-        /></a>
+        <!-- <h2 id="work-in-progress">Dabar daroma...("master" branch)</h2> -->
       </section>
 
       <!-- wrknow -->
@@ -514,7 +512,7 @@
         >linkas į padarytas užduotėles</a
       >
       <br />
-      <a id="link-to-tasks" href="#work-in-progress">dabar daroma</a>
+      <!-- <a id="link-to-tasks" href="#work-in-progress">dabar daroma</a> -->
       <ol id="toc">
         <!-- čia susigeneruos nuorodos į h2, 
           kuriems bus suteikti random id jeigu nėra id
