--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
         <a href="./projects/grid/kalendorius/index.html"
           ><img class="screenshots" src="./images/grid/gruodis.png" alt=""
         /></a>
+        <a href="./projects/grid/calculator-front/index.html"
+          ><img class="screenshots" src="./images/grid/calculator.png" alt=""
+        /></a>
       </section>
       <section>
         <!-- <h2 id="work-in-progress">Dabar daroma...("master" branch)</h2> -->
