[nica-reklama]:almost done mobile v.

--- a/projects/bootstrap/nica-reklama/index.html
+++ b/projects/bootstrap/nica-reklama/index.html
@@ -14,7 +14,309 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <nav class="d-flex justify-content-between align-items-center p-3">
+      <span class="ff-condensed fs-26 fw-700">nica reklama</span>
+      <svg
+        width="31"
+        height="19"
+        viewBox="0 0 31 19"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <line y1="0.5" x2="31" y2="0.5" stroke="#404445" />
+        <line y1="9.5" x2="31" y2="9.5" stroke="#404445" />
+        <line y1="18.5" x2="31" y2="18.5" stroke="#404445" />
+      </svg>
+    </nav>
+    <header
+      class="d-flex flex-column justify-content-center align-items-center text-center text-white"
+    >
+      <h1 class="title fs-54 fw-500">Įmonė besiverčianti reklama</h1>
+      <p class="my-3 fs-26 text-intro-grey">
+        Įmonės pristatymas keliais sakiniais, pagrindinės veiklos apibūdinimas
+      </p>
+      <button class="btn btn-success-custom col-6 mt-5">susisiekti</button>
+    </header>
+    <main>
+      <section class="py-5 d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-center mb-4">
+          <iconify-icon
+            icon="simple-line-icons:bubbles"
+            style="color: #49c0fc"
+            width="38"
+            height="38"
+          ></iconify-icon>
+
+          <h2>Socialinių tinklų reklama</h2>
+          <p class="text-center">
+            Mes siūlome reklamą įvairiuose socialiniuose tinkluose.
+          </p>
+        </div>
+        <div class="d-flex flex-column align-items-center mb-4">
+          <iconify-icon
+            icon="simple-line-icons:direction"
+            style="color: #49c0fc"
+            width="38"
+            height="38"
+          ></iconify-icon>
+
+          <h2>Reklama lauke</h2>
+          <p class="text-center">
+            Mes siūlome reklamą įvairiuose stenduose ar plakatuose lauke.
+          </p>
+        </div>
+        <div class="d-flex flex-column align-items-center mb-4">
+          <iconify-icon
+            icon="simple-line-icons:earphones"
+            style="color: #49c0fc"
+            width="38"
+            height="38"
+          ></iconify-icon>
+
+          <h2>Reklama per radiją</h2>
+          <p class="text-center">
+            Mūsų sukurtas reklamas galėsite išgirsti per radiją.
+          </p>
+        </div>
+        <div class="d-flex flex-column align-items-center mb-4">
+          <iconify-icon
+            icon="simple-line-icons:call-end"
+            style="color: #49c0fc"
+            width="38"
+            height="38"
+          ></iconify-icon>
+
+          <h2>Reklama telefonu</h2>
+          <p class="text-center">
+            Reklamuosime jūsų paslaugas skambindami jūsų tikslinei auditorijai.
+          </p>
+        </div>
+        <img class="img-fluid col-10" src="./pics/office.png" alt="" />
+      </section>
+      <section class="py-5 bg-light-grey d-flex flex-column align-items-center">
+        <h3 class="text-center">Vaizdai iš mūsų įmonės</h3>
+        <p class="col-10 fs-18">
+          Nulla volutpat in ut risus imperdiet aenean justo, tristique neque
+          scelerisque feugiat adipiscing non nulla feugiat lacus sem sed
+          maecenas
+        </p>
+        <svg
+          width="60"
+          height="60"
+          viewBox="0 0 60 60"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle
+            cx="30"
+            cy="30"
+            r="29"
+            fill="#43C45F"
+            stroke="white"
+            stroke-width="2"
+          />
+          <path d="M41 30L24.5 39.5263L24.5 20.4737L41 30Z" fill="white" />
+        </svg>
+        <img class="img-fluid col-10" src="./pics/wrk-discussion.jpeg" alt="" />
+      </section>
+      <section class="container py-5">
+        <h3 class="mt-5 mb-4 fs-22">Mūsų statistika</h3>
+        <p class="fw-bold fs-34 fw-500">
+          Non sapien egestas mi, faucibus dis vel velit eu, quisque ultrices
+          aliquet diam faucibus ridiculus.
+        </p>
+        <!-- line -->
+
+        <div class="row border-top py-5">
+          <div class="a-stat col-6 d-flex flex-column justify-content-between">
+            <iconify-icon
+              icon="simple-line-icons:basket"
+              style="color: #49c0fc"
+              width="38"
+              height="38"
+            ></iconify-icon>
+
+            <span>145</span>
+            <p>Įgyvendinti projektai</p>
+          </div>
+          <div class="a-stat col-6 d-flex flex-column">
+            <iconify-icon
+              icon="simple-line-icons:cup"
+              style="color: #49c0fc"
+              width="38"
+              height="38"
+            ></iconify-icon>
+
+            <span>345</span>
+            <p>Kavos puodeliai</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="a-stat col-6 d-flex flex-column">
+            <iconify-icon
+              icon="simple-line-icons:diamond"
+              style="color: #49c0fc"
+              width="38"
+              height="38"
+            ></iconify-icon>
+
+            <span>87</span>
+            <p>Patenkinti klientai</p>
+          </div>
+          <div class="a-stat col-6 d-flex flex-column">
+            <iconify-icon
+              icon="simple-line-icons:briefcase"
+              style="color: #49c0fc"
+              width="38"
+              height="38"
+            ></iconify-icon>
+
+            <span>45</span>
+            <p>Įmonės partnerės</p>
+          </div>
+        </div>
+      </section>
+      <section
+        class="py-5 bg-light-grey d-flex flex-column align-items-center text-center"
+      >
+        <h3 class="mt-5 mb-4">Darbų galerija</h3>
+        <p class="text-center col-10 fs-18">
+          Amet rutrum molestie nibh sed nulla facilisis commodo, dui in viverra
+          lectus quis faucibus volutpat leo ut sed dignissim egestas
+        </p>
+        <div class="a-project">
+          <img class="img-fluid col-10" src="./pics/fotographer.jpeg" alt="" />
+          <h3>Pirmas projektas</h3>
+          <p class="col-10">
+            In proin odio pellentesque vitae, fringilla parturient nulla
+            dignissim turpis mauris maecenas mattis phasellus eu, bibendum
+            viverra curabitur elementum viverra.
+          </p>
+        </div>
+        <div class="a-project">
+          <img class="img-fluid col-10" src="./pics/desert.jpeg" alt="" />
+          <h3>Antras projektas</h3>
+          <p class="col-10">
+            Euismod maecenas magna purus nibh mi, sagittis ultrices orci
+            ultrices vel tempus viverra non tempus tincidunt sed donec cursus
+            cras.
+          </p>
+        </div>
+        <div class="a-project">
+          <img class="img-fluid col-10" src="./pics/concert.jpeg" alt="" />
+          <h3>Trečias projektas</h3>
+          <p class="col-10">
+            Nisl eget sem vestibulum, sollicitudin at tortor, nunc porttitor
+            vestibulum, id urna, at sit a nulla eget sed aliquet amet.
+          </p>
+        </div>
+      </section>
+      <div
+        class="py-5 text-white bg-dark-bluish d-flex flex-column align-items-center"
+      >
+        <h1 class="mt-5 mb-4 fs-34 fw-700">Prenumeruoti</h1>
+        <p class="col-10 text-center py-3 fs-18">
+          Amet tristique et integer dolor mi nullam risus id dapibus ornare in
+          morbi non adipiscing pellentesque facilisis sed amet, porta
+        </p>
+        <input
+          class="col-10 py-3 my-3 rounded"
+          placeholder="Jūsų el. pašto adresas"
+        />
+        <button class="btn btn-success-custom text-center col-10 fs-18">
+          Prenumeruoti
+        </button>
+      </div>
+      <section class="py-5 d-flex flex-column align-items-center text-center">
+        <h3 class="">Komanda</h3>
+        <p class="col-10 fs-18">
+          Gravida arcu consectetur ut fringilla augue risus enim sit mattis
+          lacinia libero netus lectus aenean proin lobortis praesent lobortis at
+        </p>
+        <div class="persona bg-light-grey my-2">
+          <img class="img-fluid" src="./pics/director.jpeg" alt="" />
+
+          <h3>Ona Onutienė</h3>
+          <h4>Direktorė</h4>
+        </div>
+
+        <div class="persona bg-light-grey my-2">
+          <img class="img-fluid" src="./pics/reklamos-vadovas.jpeg" alt="" />
+
+          <h3>Petras Petrauskas</h3>
+          <h4>Reklamos vadovas</h4>
+        </div>
+
+        <div class="persona bg-light-grey my-2">
+          <img class="img-fluid" src="./pics/marketingo-vadove.jpeg" alt="" />
+
+          <h3>Inga Ingauskienė</h3>
+          <h4>Marketingo vadovė</h4>
+        </div>
+
+        <div class="persona bg-light-grey my-2">
+          <img class="img-fluid" src="./pics/seo-spec.jpeg" alt="" />
+
+          <h3>Giedrius Giedriauskas</h3>
+          <h4>SEO specialistas</h4>
+        </div>
+      </section>
+      <section
+        class="border-top py-5 d-flex flex-column align-items-center text-center"
+      >
+        <h3 class="">Pakalbėkite apie tai kas jums svarbu</h3>
+        <p class="col-10 py-3 fs-18">
+          At nunc interdum suscipit sit justo, commodo amet tristique aliquet
+          sit mi proin facilisi et, pharetra pellentesque id tortor tempus
+        </p>
+        <button class="btn btn-success-custom col-6">Susisiekti</button>
+      </section>
+      <footer
+        class="py-5 bg-dark-grey text-white d-flex flex-column align-items-center text-center"
+      >
+        <h1 class="mb-4 ff-condensed fs-26 fw-700">nica reklama</h1>
+        <p class="col-10">
+          Dictum bibendum nisl donec morbi at pharetra sed quis vitae integer
+          pharetra, tincidunt morbi nec aliquam non lacus, sagittis non
+        </p>
+        <h2>Kontaktai</h2>
+        <p>Adresas: Gatvė g. 24-10, Kaunas, LT54877, Lietuva</p>
+        <div class="tels text-greyish mb-5">
+          <span>Telefonai pasiteiravimui:</span>
+          <span>+370 123 45678</span>
+          <span>+370 987 65432</span>
+        </div>
+
+        <h2>Straipsniai</h2>
+        <p class="text-white">Aenean convallis eros</p>
+        <p>Vestibulum diam venenatis</p>
+        <div class="line-200"></div>
+        <p class="text-white">Aenean convallis eros</p>
+        <p>Vestibulum diam venenatis</p>
+        <div class="line-200"></div>
+        <p class="text-white">Aenean convallis eros</p>
+        <p>Vestibulum diam venenatis</p>
+
+        <h2>Navigacija</h2>
+        <a href="#">Pagrindinis</a>
+        <div class="line-200"></div>
+        <!-- inser::after line -->
+        <a href="#">Paslaugos</a>
+        <div class="line-200"></div>
+        <a href="#">Apie mus</a>
+        <div class="line-200"></div>
+        <a href="#">Straipsniai</a>
+        <div class="line-200"></div>
+        <a href="#">Konktaktai</a>
+      </footer>
+      <!-- line -->
+      <p class="bg-darker text-greyish text-center py-5">
+        Visos teisės saugomos, nica reklama
+      </p>
+    </main>
+
+    <!-- scriptai -->
     <script src="./js/bootstrap.js"></script>
-    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="./js/iconify-icon.min.js.js"></script>
   </body>
 </html>
