[nica-reklama]:sucentravau video play icon

--- a/projects/bootstrap/nica-reklama/index.html
+++ b/projects/bootstrap/nica-reklama/index.html
@@ -94,30 +94,36 @@
         <img class="img-fluid col-10" src="./pics/office.png" alt="" />
       </section>
       <section class="py-5 bg-light-grey d-flex flex-column align-items-center">
-        <h3 class="text-center">Vaizdai iš mūsų įmonės</h3>
-        <p class="col-10 fs-18">
+        <h3 class="text-center col-10">Vaizdai iš mūsų įmonės</h3>
+        <p class="text-center col-10 fs-18">
           Nulla volutpat in ut risus imperdiet aenean justo, tristique neque
           scelerisque feugiat adipiscing non nulla feugiat lacus sem sed
           maecenas
         </p>
-        <svg
-          width="60"
-          height="60"
-          viewBox="0 0 60 60"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <circle
-            cx="30"
-            cy="30"
-            r="29"
-            fill="#43C45F"
-            stroke="white"
-            stroke-width="2"
+        <div class="centravimo my-3">
+          <svg
+            width="60"
+            height="60"
+            viewBox="0 0 60 60"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle
+              cx="30"
+              cy="30"
+              r="29"
+              fill="#43C45F"
+              stroke="white"
+              stroke-width="2"
+            />
+            <path d="M41 30L24.5 39.5263L24.5 20.4737L41 30Z" fill="white" />
+          </svg>
+          <img
+            class="img-fluid col-10"
+            src="./pics/wrk-discussion.jpeg"
+            alt=""
           />
-          <path d="M41 30L24.5 39.5263L24.5 20.4737L41 30Z" fill="white" />
-        </svg>
-        <img class="img-fluid col-10" src="./pics/wrk-discussion.jpeg" alt="" />
+        </div>
       </section>
       <section class="container py-5">
         <h3 class="mt-5 mb-4 fs-22">Mūsų statistika</h3>
